--- a/todo.txt
+++ b/todo.txt
@@ -6,5 +6,5 @@
 * Do a drag and drop spike/branch
 * XSS protection... (cleanup content?)
 * Frontend - rails?
-* Extract Feed Entry extraction.
 * Sanitize rss feeds (whitelist)
+* Limit content length on items..?
